tests/golden/error/import_not_found/mymod.tg
// Submodule that does NOT export NonExistent.

pub type SomeType = Nat
